refactor(config): Revamp configuration management and database connection setup
- Replaced Pydantic-based settings with a custom ConfigSettings class utilizing dotenv for environment variable management.
- Updated database connection logic to use asyncpg for PostgreSQL.
- Refactored Alembic migration setup to ensure compatibility with async database operations.
- Enhanced Docker configurations for development and production environments.
- Improved README documentation for running migrations and troubleshooting.
- Removed deprecated database configuration files and streamlined database session management.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-POSTGRES_HOST=localhost
+# APPLICATION
+ENVIRONMENT="development"
+DEBUG=false
+
+# DATABASE: POSTGRES
+
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_DB="postgres"
+POSTGRES_HOST="db"
 POSTGRES_PORT=5432
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
