--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,33 +1,26 @@
 services:
   db:
-    image: postgres:16
+    image: postgres:latest
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 5s
       timeout: 5s
       retries: 5
 
   api:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
+    build: .
     volumes:
-      - .:/app
-      - /app/.venv
+      - ./migrations:/app/migrations
     env_file:
       - .env
     environment:
       - ENVIRONMENT=development
-      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/postgres
-      - PATH=/app/.venv/bin:$PATH
     ports:
       - "8000:8000"
     depends_on:
