--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,10 @@ uvicorn = "^0.27.0"
 loguru = "^0.7.3"
 sqlalchemy = "^2.0.41"
 alembic = "^1.16.1"
-psycopg2-binary = "^2.9.10"
-asyncpg = "^0.30.0"
+aiomysql = "^0.2.0"
 pydantic-settings = "^2.9.1"
+pymysql = "^1.1.1"
+cryptography = "^45.0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
