--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ DEBUG=false
 
 # DATABASE: POSTGRES
 
-POSTGRES_USER="postgres"
-POSTGRES_PASSWORD="postgres"
-POSTGRES_DB="postgres"
-POSTGRES_HOST="db"
-POSTGRES_PORT=5432
+MYSQL_USER="root"
+MYSQL_PASSWORD="securepass123"
+MYSQL_HOST="127.0.0.1"
+MYSQL_PORT=3307
+MYSQL_DATABASE="leaf"
