--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,33 +1,40 @@
-FROM python:3.11-slim
+FROM python:3.11-buster as builder
 
-WORKDIR /app
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    postgresql-client \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install poetry
 RUN pip install poetry==1.7.1
 
-# Configure poetry
 ENV POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_IN_PROJECT=1 \
     POETRY_VIRTUALENVS_CREATE=1 \
     POETRY_CACHE_DIR=/tmp/poetry_cache
 
-# Copy the entire project first
+WORKDIR /app
+
+# Copy poetry configuration files
+COPY pyproject.toml poetry.lock* ./
+
+# Install dependencies
+RUN poetry install --no-root --no-dev
+
+# Copy application code
 COPY . .
 
-# Install dependencies including dev dependencies
-RUN poetry install
+# Install the project
+RUN poetry install --no-dev
 
-# Create virtual environment directory
-RUN mkdir -p /app/.venv
+# Final stage
+FROM python:3.11-slim
+
+WORKDIR /app
+
+# Copy virtual environment from builder
+COPY --from=builder /app/.venv /app/.venv
+COPY --from=builder /app /app
+
+# Set environment variables
+ENV PATH="/app/.venv/bin:$PATH"
 
 # Expose the port your FastAPI app runs on
 EXPOSE 8000
 
-# Command to run the application (will be overridden by docker-compose)
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
+# Command to run the application
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
