--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5432/postgres
+sqlalchemy.url = driver://user:password@mysql:3306/db
 # NOTE: This value is always overridden in app/main.py or when running Alembic via CLI with --sqlalchemy-url
 
 
