--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,7 @@ MYSQL_PASSWORD="securepass123"
 MYSQL_HOST="127.0.0.1"
 MYSQL_PORT=3307
 MYSQL_DATABASE="leaf"
+
+# MIDDLEWARE
+
+ALLOWED_ORIGINS='["http://localhost:3000", "http://127.0.0.1:3000"]'
