--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -36,3 +36,8 @@ services:
       timeout: 5s
       retries: 10
       start_period: 30s
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
